...
              title: const Text('Đổi mật khẩu'),
              content: _buildPasswordStep(),
              isActive: _currentStep >= 1,
              state: _currentStep > 1 ? StepState.complete : StepState.indexed,
            ),
            Step(
              title: const Text('Xác thực email'),
              content: _buildVerificationStep(),
              isActive: _currentStep >= 2,
            ),
          ],
        ),
      ),
...
